--- a/VertGreen/src/main/resources/lang/en_TS.properties
+++ b/VertGreen/src/main/resources/lang/en_TS.properties
@@ -202,7 +202,7 @@ commandsModeration=Moderation
 commandsMaintenance=Maintenance
 commandsBotOwner=Bot owner
 commandsMoreHelp=Say {0} to get more information on a specific command.
-helpDM=Want to add me to your server? If you have Manage Server permissions for your guild, you can invite me here\:\nhttps://discordapp.com/oauth2/authorize?&client_id=320192251479195648&scope=bot\nYou cannot send me commands through DM.\n Need support or just want to hang out? Join my developement server here:\n http://discord.gg/dWVqUP5
+helpDM=Want to add me to your server? If you have Manage Server permissions for your guild, you can invite me here\:\nhttps://discordapp.com/oauth2/authorize?&client_id=320192251479195648&scope=bot\nYou cannot send me commands through DM.\nNeed support or just want to hang out? Join my developement server here:\nhttp://discord.gg/dWVqUP5\nYou can help fund the bot and donate on Patron here:\nhttps://www.patreon.com/VertGreen
 helpSent=Documentation has been sent to your DMs\!
 helpProperUsage=This is how you do it\:
 helpCommandOwnerRestricted=This command is restricted to the owner of the bot.
