Adjusted Lang files

--- a/VertGreen/src/main/resources/lang/en_PT.properties
+++ b/VertGreen/src/main/resources/lang/en_PT.properties
@@ -167,8 +167,8 @@ rollSuccess={0} rolls around on the floor.
 facedeskSuccess={0} facedesks.
 langInvalidCode=Th'' tongue {0} ain''t real or allowed.
 langSuccess=Swapped tongue to {0}.
-langInfo=FreddyBoat 'as many tongues it speaks. Officers can change this wit' `;;lang <code>` Here is th' list of 'em\:
-langDisclaimer=We ain't perfect, crooked or missin' words translatin' at <https\://crowdin.com/project/fredboat>.
+langInfo=I 'as many tongues I speaks. Officers can change this wit' `;;lang <code>` Here is th' list of 'em\:
+langDisclaimer=We ain't perfect, crooked or missin' words translatin'.
 loadSingleTrack=**{0}** ''as been added to the blabber.
 loadSingleTrackAndPlay=**{0}** shall noise.
 invite=Board the ship **{0}**\:
