--- a/VertGreen/src/main/resources/lang/en_TS.properties
+++ b/VertGreen/src/main/resources/lang/en_TS.properties
@@ -168,7 +168,7 @@ facedeskSuccess={0} facedesks.
 langInvalidCode=What is this? {0} I can''t understand it\! Idiot\!
 langSuccess=Fine\! I will speak in {0} now.
 langInfo=Want me to speak another language? Don't have Tsundere fetish? Well good for you\! Use `;;lang <code>` These are all the language I can speak\:
-langDisclaimer=We may not have translated everything correctly; but who cares about your stupid Tsundere fetish\! Correct it yourself here\: <https\://crowdin.com/project/fredboat>.
+langDisclaimer=We may not have translated everything correctly; but who cares about your stupid Tsundere fetish\!
 loadSingleTrack=I''ve added {0} to the queue. Now, wait and don''t complain it''s annoying\!
 loadSingleTrackAndPlay=Fine\! I will play this **{0}** song of yours.
 invite=This is link to invite {0} \:
